force-app/main/default/objects/Individual_Requirement__c/Individual_Requirement__c.object-meta.xml
<CustomObject>
    <description>The requirement or checklist item.</description>
    <label>Individual Requirement</label>
    <nameField>
        <label>Individual Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>