force-app/main/default/objects/Individual_Requirement__c/fields/Create_Salesforce_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Salesforce_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Task creation indicator.</description>
    <label>Create Salesforce Task</label>
    <type>Checkbox</type>
</CustomField>