force-app/main/default/objects/Individual_Requirement__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Task&apos;s due date.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>