force-app/main/default/objects/Individual_Requirement__c/fields/File_Category__c.field-meta.xml
<CustomField>
    <fullName>File_Category__c</fullName>
    <description>For file upload.</description>
    <label>File Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Letter of Acceptance</fullName>
            </value>
            <value>
                <fullName>Personal Identity</fullName>
            </value>
            <value>
                <fullName>Profile Picture</fullName>
            </value>
            <value>
                <fullName>Referral Letter</fullName>
            </value>
            <value>
                <fullName>Transcript</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>