force-app/main/default/objects/Individual_Requirement__c/fields/File_Count__c.field-meta.xml
<CustomField>
    <fullName>File_Count__c</fullName>
    <description>For file upload.Number of files required.</description>
    <inlineHelpText>Number of files to be uploaded.</inlineHelpText>
    <label>File Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>