force-app/main/default/objects/Individual_Requirement__c/fields/File_Format__c.field-meta.xml
<CustomField>
    <fullName>File_Format__c</fullName>
    <description>For file upload. Comma-separated list of file extensions that can be uploaded e.g., .pdf,.doc,.docx.</description>
    <label>File Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>