force-app/main/default/objects/Individual_Requirement__c/fields/File_Share_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Share_Type__c</fullName>
    <description>For file upload. The permission granted to the user of the uploaded file. V = Viewer, I = Determined by related record.</description>
    <label>File Share Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>V</fullName>
                <default>true</default>
                <label>V</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>