force-app/main/default/objects/Individual_Requirement__c/fields/Individual_Requirement_Set__c.field-meta.xml
<CustomField>
    <fullName>Individual_Requirement_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Requirement Set</label>
    <referenceTo>Individual_Requirement_Set__c</referenceTo>
    <relationshipLabel>Individual Requirements</relationshipLabel>
    <relationshipName>Individual_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>