force-app/main/default/objects/Individual_Requirement__c/fields/Object_Fields__c.field-meta.xml
<CustomField>
    <fullName>Object_Fields__c</fullName>
    <description>For field update. The field API separated by semi-colon e.g., Field_A__c;Field_B__c of the target object or the parent object defined in the object relation field.</description>
    <inlineHelpText>For field update. The field API separated by semi-colon e.g., Field_A__c;Field_B__c of the target object or the parent object defined in the object relation field.</inlineHelpText>
    <label>Object Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>