force-app/main/default/objects/Individual_Requirement__c/fields/Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Review_Comments__c</fullName>
    <description>The review notes/comments.</description>
    <inlineHelpText>The review notes/comments.</inlineHelpText>
    <label>Review Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>