force-app/main/default/objects/Individual_Requirement__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>This should be populated automatically when Review Status is changed and matches any of the status defined as “Reviewed” in the custom metadata records</description>
    <inlineHelpText>Date of when the review is finalized.</inlineHelpText>
    <label>Review Date</label>
    <type>DateTime</type>
</CustomField>