force-app/main/default/objects/Individual_Requirement__c/fields/Study_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Study_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Requirement</label>
    <referenceTo>Study_Requirement__c</referenceTo>
    <relationshipLabel>Individual Requirements</relationshipLabel>
    <relationshipName>Individual_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>