force-app/main/default/objects/Individual_Requirement__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>This should be populated automatically when the Submission Status is set to submitted.</description>
    <inlineHelpText>Date of when the details is submitted.</inlineHelpText>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>