force-app/main/default/objects/Individual_Requirement__c/validationRules/Prevent_Empty_Individual_Requirement_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Empty_Individual_Requirement_Set</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Individual_Requirement_Set__c)</errorConditionFormula>
    <errorDisplayField>Individual_Requirement_Set__c</errorDisplayField>
    <errorMessage>A parent Individual Requirement Set is required.</errorMessage>
</ValidationRule>